front end logic to add and delete cupcakes

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,6 @@
     <!-- Custom CSS Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>
         {% block title %}
         Cupcakes
@@ -26,6 +24,13 @@
         
         {% endblock %}
     </div>
+    
+<script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+<script src="https://unpkg.com/axios/dist/axios.js"></script>
+
 <script src="/static/index.js"></script>
 </body>
 </html>
