--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,30 @@ Cupcakes
 {% endblock %}
 
 {% block content %}
-    <ul class="list-group">
+    <ul class="list-group" id="cupcake-list">
 
     </ul>
+
+    <h2 class="text-center mt-4">Add New Cupcake</h2>
+    <br><br>
+    <form action="/" method="POST" class="form-group">
+        <label for="cupcake-flavor">Flavor: 
+            <input name="cupcake-flavor" id="cupcake-flavor" placeholder="snozzberry" size="50">
+        </label>
+        <br><br>
+        <label for="cupcake-size">Size: 
+            <input name="cupcake-size" id="cupcake-size" placeholder="HUGE" size="50">
+        </label>
+        <br><br>
+        <label for="cupcake-rating">Rating: 
+            <input name="cupcake-rating" id="cupcake-rating" placeholder="10" size="50">
+        </label>
+        <br><br>
+        <label for="img-url">Image URL: 
+            <input name="img-url" id="img-url" type="url" value="https://tinyurl.com/demo-cupcake" size="50">
+        </label>
+        <br><br>
+
+        <button type="submit" class="btn btn-primary">Add Cupcake</button>
+    </form>
 {% endblock %}
