js and html refactoring

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,19 +17,19 @@ Cupcakes
     <br><br>
     <form action="/" method="POST" class="form-group">
         <label for="cupcake-flavor">Flavor: 
-            <input name="cupcake-flavor" id="cupcake-flavor" placeholder="snozzberry" size="50">
+            <input name="cupcake-flavor" id="cupcake-flavor" class="form-control" placeholder="snozzberry" size="50">
         </label>
         <br><br>
         <label for="cupcake-size">Size: 
-            <input name="cupcake-size" id="cupcake-size" placeholder="HUGE" size="50">
+            <input name="cupcake-size" id="cupcake-size" class="form-control" placeholder="HUGE" size="50">
         </label>
         <br><br>
         <label for="cupcake-rating">Rating: 
-            <input name="cupcake-rating" id="cupcake-rating" placeholder="10" size="50">
+            <input name="cupcake-rating" id="cupcake-rating" class="form-control" placeholder="10" size="50">
         </label>
         <br><br>
         <label for="img-url">Image URL: 
-            <input name="img-url" id="img-url" type="url" value="https://tinyurl.com/demo-cupcake" size="50">
+            <input name="img-url" id="img-url" class="form-control" type="url" value="https://tinyurl.com/demo-cupcake" size="50">
         </label>
         <br><br>
 
